--- a/MvcClient/MvcClient.csproj
+++ b/MvcClient/MvcClient.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
 	  <AllowUntrustedCertificate>True</AllowUntrustedCertificate>
+	  <UserSecretsId>45f46781-ea9c-4b69-bcb3-cc01f85df029</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
