--- a/MvcClient/appsettings.Development.json
+++ b/MvcClient/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
   "BaseIDPAddress": "https://localhost:5001",
+  "BaseAPIAddress": "https://localhost:44363",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
