--- a/MvcClient/appsettings.json
+++ b/MvcClient/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "BaseIDPAddress": "https://aliveidea-001-site3.htempurl.com/",
+  "BaseAPIAddress": "https://aliveidea-001-site2.htempurl.com/",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
