#Production working * Descomentar metodo seed data si creas la db nueva

--- a/src/IdentityServerAspNetIdentity/appsettings.json
+++ b/src/IdentityServerAspNetIdentity/appsettings.json
@@ -1,5 +1,7 @@
 ﻿{
+  "GoogleClientId": "392679803431-gojma7074podar24rfpnm5crouhadiec.apps.googleusercontent.com",
+  "GoogleSecretId": "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",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Data Source=SQL5105.site4now.net;Initial Catalog=db_a6ff7d_idp;User Id=db_a6ff7d_idp_admin;Password=Waneke_92"
   }
 }
